Dev/src/Campaign Calendar/objects/Campaign_User_Color__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag which denotes an active color setting.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Border_Color__c</fullName>
        <defaultValue>&quot;#3366CC&quot;</defaultValue>
        <description>The campaign calendar border color.</description>
        <label>Border Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <defaultValue>&quot;999999&quot;</defaultValue>
        <description>The hexadecimal representation of the calendar color.</description>
        <label>Color</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldOptionOwner__c</fullName>
        <externalId>true</externalId>
        <label>FieldOptionOwner</label>
        <length>118</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldOption__c</fullName>
        <label>FieldOption</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>The API name for the Campaign object field associated with the color.</description>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Label__c</fullName>
        <description>The field option&apos;s label.</description>
        <label>Option Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <description>The field&apos;s option value.</description>
        <label>Option</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <defaultValue>&quot;#ffffff&quot;</defaultValue>
        <description>The campaign calendar text color.</description>
        <label>Text Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Campaign User Color</label>
    <nameField>
        <label>Campaign User Color Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign User Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>